[package]
name = "rslox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"

[[bin]]
name = "interpreter"
path = "src/interpreter/main.rs"

[[bin]]
name = "vm"
path = "src/vm/main.rs"